--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -5,17 +5,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!--foundation css-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css"
-        integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I=" crossorigin="anonymous">
+    <!-- Compressed CSS -->
+<!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css" integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I=" crossorigin="anonymous">-->
     <!--my css-->
+    <link rel="stylesheet" href="/css/foundation.css">
     <link rel="stylesheet" href="/css/mystyle.css">
 </head>
-
 <body>
+    <div class="callout" data-closable>
+  <p>You can so totally close this!</p>
+  <button class="close-button" aria-label="Dismiss alert" type="button" data-close>
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
       <div class="center"> 
 {{{body}}}
     </div> 
+<!-- this will include every plugin and utility required by Foundation -->
+
+<script src="/js/vendor/jquery.js"></script>
+<script src="/js/vendor/what-input.js"></script>
+<script src="/js/vendor/foundation.js"></script>
+<script src="/js/myscript.js"></script>
+
+
 </body>
 
 </html>
