envia el animal a editar

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -10,14 +10,10 @@
     <!--my css-->
     <link rel="stylesheet" href="/css/foundation.css">
     <link rel="stylesheet" href="/css/mystyle.css">
+    <script src="https://kit.fontawesome.com/a8db0f5241.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="callout" data-closable>
-  <p>You can so totally close this!</p>
-  <button class="close-button" aria-label="Dismiss alert" type="button" data-close>
-    <span aria-hidden="true">&times;</span>
-  </button>
-</div>
+<!--{{>navigation}}-->
       <div class="center"> 
 {{{body}}}
     </div> 
@@ -27,8 +23,6 @@
 <script src="/js/vendor/what-input.js"></script>
 <script src="/js/vendor/foundation.js"></script>
 <script src="/js/myscript.js"></script>
-
-
 </body>
 
 </html>
