--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -1,6 +1,22 @@
-<div data-sticky-container>
-  <div class="title-bar" data-sticky data-options="marginTop:0;" style="width:100%" data-top-anchor="1" data-btm-anchor="content:bottom">
-    <div class="title-bar-left"><span>logo</span></div>
-    <div class="title-bar-right"></div>
+<div class="top-bar">
+  <div class="top-bar-left">
+    <ul class="menu">
+      <li class="menu-text"><a href="/"> Site Title</a></li>
+    </ul>
+  </div>
+  <div class="top-bar-right">
+    <ul class="dropdown menu align-right" data-dropdown-menu>
+      <li>
+        <a href="">Pets</a>
+        <ul class="menu  align-center">
+          <li class="shrink"><a href="/user/my_pets">My Pets</a></li>
+          <li class="shrink"><a href="/user/new_pet">New Pet</a></li>
+        </ul>
+      </li>
+      <li><a href="#">Contactanos</a></li>
+      <li><a href="/about">Somos nosotros</a></li>
+      <li><a href="/singup">Registrarse</a></li>
+      <li><a href="#">Ingresar</a></li>
+    </ul>
   </div>
 </div>
