--- a/src/views/users/singup.hbs
+++ b/src/views/users/singup.hbs
@@ -1,21 +1,31 @@
 <form data-abide novalidate action='/singup' method="POST">
     <div data-abide-error class="alert callout" style="display: none;">
-        <p><i class="fi-alert"></i> There are some errors in your form.</p>
+        <p><i class="fi-alert"></i>el formulario no ha sido llenado de manera correcta.</p>
     </div>
     <div class="grid-container">
         <div class="grid-x grid-margin-x">
             <div class="cell small-12">
                 <label>Nombre
-                    <input type="text" placeholder="1234" aria-describedby="example1Hint1"
-                        aria-errormessage="example1Error1" required pattern="alpha_numeric">
+                    <input type="text" placeholder="Nombre123" name="nombre" required pattern="alpha_numeric">
                     <span class="form-error">
                         Digite un nombre de usuario
                     </span>
                 </label>
             </div>
             <div class="cell small-12">
+                <label>Digite su Email
+                    <input type="text" name="email" required pattern="email">
+                    <span class="form-error" data-form-error-on="required">
+                        El email debe ser digitado
+                    </span>
+                    <span class="form-error" data-form-error-on="pattern">
+                        El email digitado no es valido
+                    </span>
+                </label>
+            </div>
+            <div class="cell small-12">
                 <label>contraseña
-                    <input type="password" id="password" placeholder="yeti4preZ" required>
+                    <input type="password" id="password" name="password" placeholder="yeti4preZ" required>
                     <span class="form-error">
                         Digite la contraseña
                     </span>
@@ -23,7 +33,8 @@
             </div>
             <div class="cell small-12">
                 <label>Digite la contraseña nuevamente
-                    <input type="password" placeholder="yeti4preZ" required pattern="alpha_numeric" data-equalto="password">
+                    <input type="password" placeholder="yeti4preZ" required pattern="alpha_numeric"
+                        data-equalto="password">
                     <span class="form-error" data-form-error-on="equalTo">
                         Las contraseñas no son iguales
                     </span>
@@ -34,14 +45,5 @@
             </div>
         </div>
     </div>
-    <label>Digite su Email
-        <input type="text" required pattern="email">
-        <span class="form-error" data-form-error-on="required">
-            El email debe ser digitado
-        </span>
-        <span class="form-error" data-form-error-on="pattern">
-            El email digitado no es valido
-        </span>
-    </label>
     <button class="button" type="submit" value="Submit">Submit</button>
 </form>
