añadido precio y desabilitar servico

--- a/src/views/users/mypets.hbs
+++ b/src/views/users/mypets.hbs
@@ -17,6 +17,7 @@
       </div>
     <div>
       <a href="/user/modific_pet/{{_id}}"><i class="fas fa-pencil-alt 2x"></i></a>
+      <a href="/user/new_cite/{{_id}}"><i class="fas fa-pencil-alt 2x"></i></a>
     </div>
   </div>
 </div>
