Create Users + roles

--- a/src/views/users/singup.hbs
+++ b/src/views/users/singup.hbs
@@ -44,6 +44,8 @@
                 </label>
             </div>
         </div>
+        
+        <input type="hidden" name="rol" value="{{rol}}">
     </div>
     <button class="button" type="submit" value="Submit">Submit</button>
 </form>
