--- a/src/views/services/all_services.hbs
+++ b/src/views/services/all_services.hbs
@@ -3,8 +3,8 @@
         <tr>
             <th width="300">Nombre</th>
             <th>Descripcion</th>
-            <th width="150">Operaciones</th>
-            <th width="160">Table Header</th>
+            <th width="150">Precio</th>
+            <th width="160">Operaciones</th>
         </tr>
     </thead>
     <tbody>
@@ -12,7 +12,7 @@
         <tr>
             <td>{{Nombre}}</td>
             <td>{{descripcion}}</td>
-            <td>cuarta</td>
+            <td>{{Precio}}</td>
             <td>
                 <div>
                     <a class="button tiny primary" href="#">Modificar</a>
@@ -20,7 +20,8 @@
                 </div>
                 <div>
                     <a class="button  tiny expanded {{#if activo}}success{{else}}secondary{{/if}}"
-                        href="/admin/estatechange/{{_id}}" method="POST">{{#if activo}}Desactivar{{else}}Activar{{/if}}</a>
+                        href="/admin/estatechange/{{_id}}"
+                        method="POST">{{#if activo}}Desactivar{{else}}Activar{{/if}}</a>
                 </div>
             </td>
         </tr>
