verificacion de usuario

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -16,6 +16,7 @@
 <body>
     {{>navigation}}
     <!-- <div class="center"> -->
+    {{>errors}}
     {{>messages}}
     {{{body}}}
     <!--</div> -->
