--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -16,7 +16,7 @@
       <li><a href="#">Contactanos</a></li>
       <li><a href="/about">Somos nosotros</a></li>
       <li><a href="/singup">Registrarse</a></li>
-      <li><a href="#">Ingresar</a></li>
+      <li><a href="/singin">Ingresar</a></li>
     </ul>
   </div>
 </div>
