--- a/src/views/partials/errors.hbs
+++ b/src/views/partials/errors.hbs
@@ -6,3 +6,11 @@
   <p>{{error}}</p>
 </div>
 {{/if}}
+{{#if error_msg}}
+<div class="callout" data-closable>
+  <button class="close-button" aria-label="Close alert" type="button" data-close>
+    <span aria-hidden="true">&times;</span>
+  </button>
+  <p>{{error_msg}}</p>
+</div>
+{{/if}}
