--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -18,7 +18,7 @@
       {{else}}
       <li><a href="#">Contactanos</a></li>
       <li><a href="/about">Somos nosotros</a></li>
-      <li><a href="/singup">Registrarse</a></li>
+      <li><a href="/new_user">Registrarse</a></li>
       <li><a href="/singin">Ingresar</a></li>
       {{/if}}
     </ul>
