--- a/src/views/partials/messages.hbs
+++ b/src/views/partials/messages.hbs
@@ -1,5 +1,5 @@
 {{#if success_msg}}
-<div class="callout" data-closable>
+<div class="callout success" data-closable>
   <button class="close-button" aria-label="Close alert" type="button" data-close>
     <span aria-hidden="true">&times;</span>
   </button>
