--- a/src/views/users/mypets.hbs
+++ b/src/views/users/mypets.hbs
@@ -1,24 +1,39 @@
-
 <h1>Mys pets</h1>
+<section  class="lado grid-container fluid">
+  <div class="grid-x grid-padding-x">
+    <div class="cell auto">
+      {{#each mascotas}}
 
-{{#each mascotas}}
-<div class="card" style="width: 300px;">
-  <div class="card-divider center">
-  {{nombre}}
-  </div>
-  <div class="card-section">
-      <div class="row" style="display: flex;">
-          <div class="cell small-4" style="width: 80px; height: 80px; background-color: blue;"></div>
-          <div class="cell small-8" style="padding:  0px 5% 0px;">
+      <div class="card" style="width: 300px;">
+        <div class="card-divider center">
+          {{nombre}}
+        </div>
+        <div class="card-section">
+          <div class="row" style="display: flex;">
+            <div class="cell small-4" style="width: 80px; height: 80px; background-color: blue;"></div>
+            <div class="cell small-8" style="padding:  0px 5% 0px;">
               <h6 style="padding:  0px 5% 0px;">{{sexo}}</h6>
               <h6 style="padding:  0px 5% 0px;">{{tamaño}}</h6>
               <h6 style="padding:  0px 5% 0px;">{{tipo}}</h6>
-         </div>
+            </div>
+          </div>
+          <div>
+            <a href="/user/modific_pet/{{_id}}"><i class="fas fa-pencil-alt 2x"></i></a>
+            <a href="/user/new_cite/{{_id}}"><i class="fas fa-pencil-alt 2x"></i></a>
+          </div>
+        </div>
       </div>
-    <div>
-      <a href="/user/modific_pet/{{_id}}"><i class="fas fa-pencil-alt 2x"></i></a>
-      <a href="/user/new_cite/{{_id}}"><i class="fas fa-pencil-alt 2x"></i></a>
+      {{/each}}
+
+
     </div>
+
+    <aside id="content" class="shirk" data-sticky-container>
+      <div class="sticky" data-sticky  data-margin-top="0" data-top-anchor="content">
+           <h1>aqui van mis citas</h1>
+      </div>
+    </aside>
   </div>
-</div>
- {{/each}}
+
+
+</section>
