--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,17 +1,104 @@
-{{#if user}}
-<h1>logueado</h1>
-{{#Autention user}}
-{{#if rolus}}
-<h1>usuario</h1>
-{{/if}}
-{{#if rolve}}
-<h1>veterinario</h1>
-{{/if}}
-{{#if rolad}}
-<h1>admin</h1>
-{{/if}}
-{{/Autention}}
-{{else}}
-{{calculation 50}}
-<h1>index</h1>
-{{/if}}
+<div class="img-parallax">
+    <div class="grid-contrainer">
+        <h3>el mejor ugar para tus mascotas</h3>
+    </div>
+</div>
+<section class="nuestrocuidado">
+    <div id="sw-especies" class="swiper-container text-center">
+        <h2>A nuestro cuidado</h2>
+        <h6>Un lugar seguro para la mascota que amas</h6>
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">
+                <div class="card">
+                    <div class="card-divider">
+                        <div class="img-avatar">
+                            <i class="fas fa-dog fa-4x"> </i>
+                        </div>
+                    </div>
+                    <div class="card-section">
+                        <h3>Especie</h3>
+                        <p>hola soy el animal 1</p>
+                        <a href="" class="button">Ver</a>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-slide">Slide 2</div>
+            <div class="swiper-slide">Slide 3</div>
+            <div class="swiper-slide">Slide 4</div>
+            <div class="swiper-slide">Slide 5</div>
+            <div class="swiper-slide">Slide 6</div>
+            <div class="swiper-slide">Slide 7</div>
+            <div class="swiper-slide">Slide 8</div>
+            <div class="swiper-slide">Slide 9</div>
+            <div class="swiper-slide">Slide 10</div>
+        </div>
+        {{!--  <!-- Add Pagination -->
+        <div class="swiper-pagination"></div>
+        <!-- Add Arrows -->
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div> --}}
+    </div>
+</section>
+
+<section id="servicios" class="grid-container fluid">
+    <div class="max-height grid-x grid-padding-x align-justify">
+        <div class="cell small-5 desc-services text-center align-center ">
+            <h2>Programa tu cita</h2>
+            <h4>atenciones</h4>
+            <div id="sw-desc-services" class="swiper-container">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">Slide 1</div>
+                    <div class="swiper-slide">Slide 2</div>
+                    <div class="swiper-slide">Slide 3</div>
+                    <div class="swiper-slide">Slide 4</div>
+                    <div class="swiper-slide">Slide 5</div>
+                    <div class="swiper-slide">Slide 6</div>
+                    <div class="swiper-slide">Slide 7</div>
+                    <div class="swiper-slide">Slide 8</div>
+                    <div class="swiper-slide">Slide 9</div>
+                    <div class="swiper-slide">Slide 10</div>
+                </div>
+                <!-- Add Pagination -->
+                <div class="swiper-pagination"></div>
+            </div>
+        </div>
+        <div class="cell small-7 img-services">
+            <div id="sw-img-services" class="swiper-container text-center">
+                <div class="swiper-wrapper " style="width:100%">
+                    <div class="swiper-slide">
+                        <img src="../img/inicio.png" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="../img/radiografia.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</section>
+
+<section class="google-maps grid-container full">
+    <div class="max-height grid-x grid-padding-x align-justify">
+        <div class=" small-7" style="padding-left: 5%;">
+            <div class="embed-container">
+                <iframe allowfullscreen="" aria-hidden="false" frameborder="0" height="100%"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3952.5511856760845!2d-72.46878578590093!3d7.837231908672448!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e6646843e150d2b%3A0x6b74be32eddf70a1!2sUniversidad%20de%20Pamplona%2C%20Villa%20del%20Rosario!5e0!3m2!1ses!2sco!4v1588266707563!5m2!1ses!2sco"
+                    style="border:0;" tabindex="0" width="100%">
+                </iframe>
+            </div>
+        </div>
+        <div class="cell small-5 text-center">
+                <h2>Direccion y Horario </h2>
+                <h5>180 Main St Boston MA 021103</h5>
+            <h6 class="subheader">lunes 8am a 12pm - 2pm a 5 pm </h6>
+            <h6 class="subheader">martes 8am a 12pm - 2pm a 5 pm </h6>
+            <h6 class="subheader">miercoles 8am a 12pm - 2pm a 5 pm </h6>
+            <h6 class="subheader"> jueves 8am a 12pm - 2pm a 5 pm </h6>
+            <h6 class="subheader">viernes 8am a 12pm - 2pm a 5 pm </h6>
+            <h6 class="subheader" >sabado 8am a 12pm - 2pm a 5 pm </h6>
+            <h6 class="subheader">domingo 8am a 12pm - 2pm a 5 pm </h6>
+            <a class="hollow button large" href="#">Contactar</a>
+        </div>
+    </div>
+</section>
