--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -9,8 +9,11 @@
     <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css" integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I=" crossorigin="anonymous">-->
     <!--my css-->
     <link rel="stylesheet" href="/css/foundation.css">
+    <link rel="stylesheet" href="/css/swiper.min.css">
     <link rel="stylesheet" href="/css/mystyle.css">
+
     <script src="https://kit.fontawesome.com/a8db0f5241.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
@@ -25,7 +28,10 @@
     <script src="/js/vendor/jquery.js"></script>
     <script src="/js/vendor/what-input.js"></script>
     <script src="/js/vendor/foundation.js"></script>
+
+    <script src="/js/swiper.min.js"></script>
+
     <script src="/js/myscript.js"></script>
 </body>
-
+{{>footer}} 
 </html>
