--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -10,7 +10,7 @@
         {{#if user}}
         {{#Autention user}}
         {{#if rolus}}
-        <a href="">Mis mascotas</a>
+        <a>Mis mascotas</a>
         <ul class="menu  align-center">
           <li class="shrink"><a href="/user/my_pets">Mis mascotas</a></li>
           <li class="shrink"><a href="/user/new_pet">Nueva mascota</a></li>
