--- a/src/views/services/new_service.hbs
+++ b/src/views/services/new_service.hbs
@@ -1,14 +1,15 @@
-
-<div class="card" style="width: 300px;">
-  <div class="card-divider center">
-  Nuevo Servico
-  </div>
-  <div class="card-section">
-    <form action='/admin/new_service' method="POST">
-    <input type="text" name="Nombre" placeholder="Nuevo servicio">
-    <input type="text" name="Precio" placeholder="Inserte valor">
-    <textarea name="descripcion" rows="5" cols="18" placeholder="Añada un descripcion"></textarea>
-  <button class="button" type="submit" value="Submit">Guardar</button>
-</form>
+<div class="align-center" style="padding-top: 2em;">
+  <div class="card" style="width: 300px;">
+    <div class="card-divider center">
+      Nuevo Servico
+    </div>
+    <div class="card-section">
+      <form action='/admin/new_service' method="POST">
+        <input type="text" name="Nombre" placeholder="Nuevo servicio">
+        <input type="text" name="Precio" placeholder="Inserte valor">
+        <textarea name="descripcion" rows="5" cols="18" placeholder="Añada un descripcion"></textarea>
+        <button class="button" type="submit" value="Submit">Guardar</button>
+      </form>
+    </div>
   </div>
 </div>
