--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="/css/swiper.min.css">
     <link rel="stylesheet" href="/css/mystyle.css">
 
-    <script src="https://kit.fontawesome.com/a8db0f5241.js" crossorigin="anonymous"></script>
-
+   {{!--  <script src="https://kit.fontawesome.com/a8db0f5241.js" crossorigin="anonymous"></script>
+ --}}
 </head>
 
 <body>
@@ -30,7 +30,7 @@
     <script src="/js/vendor/foundation.js"></script>
 
     <script src="/js/swiper.min.js"></script>
-
+    <script src="/js/fontawesome.js"></script>
     <script src="/js/myscript.js"></script>
 </body>
 {{>footer}} 
