--- a/src/views/users/singup.hbs
+++ b/src/views/users/singup.hbs
@@ -1,3 +1,7 @@
+<div class="container "style="
+    padding-left: 16rem;
+    padding-right: 15rem;
+    padding-top: 3rem;">
 <form data-abide novalidate action='/singup' method="POST">
     <div data-abide-error class="alert callout" style="display: none;">
         <p><i class="fi-alert"></i>el formulario no ha sido llenado de manera correcta.</p>
@@ -50,3 +54,4 @@
     </div>
     <button class="button" type="submit" value="Submit">Submit</button>
 </form>
+</div>
