--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -7,8 +7,8 @@
     </button>
 </div>
 <div class="img-parallax">
-    <div class="grid-contrainer">
-        <h3>el mejor ugar para tus mascotas</h3>
+    <div class="grid-contrainer flex-container middle">
+        <h2 style="padding-top:7em;">el mejor lugar para tus mascotas</h2>
     </div>
 </div>
 <section class="nuestrocuidado">
@@ -16,41 +16,22 @@
         <h2>A nuestro cuidado</h2>
         <h6>Un lugar seguro para la mascota que amas</h6>
         <div class="swiper-wrapper">
+            {{#each tipos}}
             <div class="swiper-slide">
                 <div class="card">
                     <div class="card-divider">
                         <div class="img-avatar">
-                            <i class="fas fa-dog fa-4x"> </i>
+                            <img src="{{image}}" alt="" style="width: 100%; height: 100%; border-radius: 50%" />
                         </div>
                     </div>
                     <div class="card-section">
-                        <h3 id="especie">Especie perro</h3>
-                        <p> hola soy el animal 1</p>
+                        <h3 id="especie">{{tipo}}</h3>
+                        <p>{{descripcion}}</p>
                         <a id="botonver" class="button" data-open="exampleModal1">Ver</a>
                     </div>
                 </div>
             </div>
-            <div class="swiper-slide">
-                <div class="card">
-                    <div class="card-divider">
-                        <div class="img-avatar">
-                            <i class="fas fa-cat fa-4x"> </i>
-                        </div>
-                    </div>
-                    <div class="card-section">
-                        <h3 id="especie">Especie gato</h3>
-                        <p> hola soy el animal 2</p>
-                        <a id="botonver" class="button" data-open="exampleModal1">Ver</a>
-                    </div>
-                </div>
-            </div>
-            <div class="swiper-slide">Slide 4</div>
-            <div class="swiper-slide">Slide 5</div>
-            <div class="swiper-slide">Slide 6</div>
-            <div class="swiper-slide">Slide 7</div>
-            <div class="swiper-slide">Slide 8</div>
-            <div class="swiper-slide">Slide 9</div>
-            <div class="swiper-slide">Slide 10</div>
+            {{/each}}
         </div>
         {{!--  <!-- Add Pagination -->
         <div class="swiper-pagination"></div>
@@ -67,16 +48,14 @@
             <h4>atenciones</h4>
             <div id="sw-desc-services" class="swiper-container">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide">Slide 1</div>
-                    <div class="swiper-slide">Slide 2</div>
-                    <div class="swiper-slide">Slide 3</div>
-                    <div class="swiper-slide">Slide 4</div>
-                    <div class="swiper-slide">Slide 5</div>
-                    <div class="swiper-slide">Slide 6</div>
-                    <div class="swiper-slide">Slide 7</div>
-                    <div class="swiper-slide">Slide 8</div>
-                    <div class="swiper-slide">Slide 9</div>
-                    <div class="swiper-slide">Slide 10</div>
+                    {{#each servicios}}
+                    <div class="swiper-slide">
+                        <div class="card">
+                            {{Nombre}}
+                            {{descripcion}}
+                        </div>
+                    </div>
+                    {{/each}}
                 </div>
                 <!-- Add Pagination -->
                 <div class="swiper-pagination"></div>
@@ -85,12 +64,11 @@
         <div class="cell small-7 img-services">
             <div id="sw-img-services" class="swiper-container text-center">
                 <div class="swiper-wrapper " style="width:100%">
+                    {{#each servicios}}
                     <div class="swiper-slide">
-                        <img src="../img/inicio.png" alt="">
+                        <img src="{{image}}" alt="">
                     </div>
-                    <div class="swiper-slide">
-                        <img src="../img/radiografia.png" alt="">
-                    </div>
+                    {{/each}}
                 </div>
             </div>
         </div>
