--- a/src/views/partials/footer.hbs
+++ b/src/views/partials/footer.hbs
@@ -1,6 +1,6 @@
 <footer id="footer">
     <section class="grid-container text-center">
-        <div  class="grid-x grid-margin-x small-up-2 large-up-4 ">
+        <div class="grid-x grid-margin-x small-up-2 large-up-4 ">
             <div class="cell">
                 <ul class="no-bullet">
                     <li><b>NUESTRA EMPRESA</b></li>
@@ -28,13 +28,21 @@
                     <li>sci-pet@gmail.com</li>
                 </ul>
             </div>
-            <div class="cell">
-                <ul class="no-bullet">
-                    <li><b>titulo</b></li>
-                    <li>One</li>
-                    <li>Two</li>
-                    <li>Three</li>
-                </ul>
+            <div class="cell" style="display: flex;align-content: center;align-items: center;">
+            
+                    <a href="https://www.youtube.com/" target="_blank"><img src="/img/pngfuel yt.png" width="40"
+                            height="40" alt="" /></a>
+                    <a href="https://www.tumblr.com/" target="_blank"><img src="/img/pngfuel tumblr.png" width="30"
+                            height="30" alt="" /></a>
+                    <a href="https://www.facebook.com/" target="_blank"><img src="/img/pngfuel face.png" width="40"
+                            height="40" alt="" /></a>
+                    <a href="https://twitter.com/explore" target="_blank"><img src="/img/pngfuel twitt.png" width="40"
+                            height="40" alt="" /></a>
+                    <a href="#0" target="_blank"><img src="/img/pngfuel what.png" width="32" height="32" alt="" /></a>
+                    <a href="https://www.instagram.com/" target="_blank"><img src="/img/pngfuel insta.png" width="35"
+                            height="35" alt="" /></a>
+                    <img src="/img/pngocean mas.png" width="30" height="30" alt="" />
+
             </div>
         </div>
         <div class="copyri">
