--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -1,7 +1,7 @@
 <div class="top-bar">
   <div class="top-bar-left">
     <ul class="menu">
-      <li class="menu-text"><a href="/"> Site Title</a></li>
+      <li class="menu-text"><a href="/">Veterinaria Patitas</a></li>
     </ul>
   </div>
   <div class="top-bar-right">
