--- a/src/views/users/singin.hbs
+++ b/src/views/users/singin.hbs
@@ -3,8 +3,8 @@
         <p><i class="fi-alert"></i>Debe llenar todos los campos.</p>
     </div>
     <div class="grid-container">
-        <div class="grid-x grid-margin-x">
-            <div class="cell small-12">
+        <div class="grid-x grid-margin-x" style="display: flex;align-content: center;padding-top: 3rem;flex-direction: column;padding-bottom: 3rem;">
+            <div class="cell small-6">
                 <label>Digite su Email
                     <input type="text" name="email" required pattern="email">
                     <span class="form-error" data-form-error-on="required">
@@ -15,7 +15,7 @@
                     </span>
                 </label>
             </div>
-            <div class="cell small-12">
+            <div class="cell small-6">
                 <label>contraseña
                     <input type="password" id="password" name="password" placeholder="yeti4preZ" required>
                     <span class="form-error">
@@ -23,7 +23,9 @@
                     </span>
                 </label>
             </div>
+            <button class="button" type="submit" value="Submit" style="width: fit-content">Entrar</button>
         </div>
+
     </div>
-    <button class="button" type="submit" value="Submit">Submit</button>
+
 </form>
